css/style.css
/* ... */
@media screen and (max-width: 575px) {
    .traffic-section__titles {
        padding-left: 0rem;
        align-items: center;
        padding-top: 10rem;
    }
}

.traffic-section__titles .decor {
    position: absolute;
    width: 24.4rem;
    top: 4.5rem;
    left: -6rem;
    pointer-events: none;
}

@media screen and (max-width: 575px) {
    .traffic-section__titles .decor {
        width: 8.6rem;
        left: 5rem;
        top: 4rem;
    }
}

.traffic-section__titles-title {
    font-family: "Drukwidecyr", sans-serif;
    font-weight: 700;
    font-size: 7.1rem;
    line-height: 0.9;
    text-transform: uppercase;
    color: #fff;
}

@media screen and (max-width: 575px) {
    .traffic-section__titles-title {
        font-size: 3.4rem;
    }
}

.traffic-section__titles-subtitle {
    display: flex;
    align-items: start;
    margin-top: 4.4rem;
    -moz-column-gap: 0.5rem;
    column-gap: 0.5rem;
}

@media screen and (max-width: 575px) {
    .traffic-section__titles-subtitle {
        margin-left: -2rem;
    }
}

.traffic-section__titles-subtitle .icon {
    width: 3.1rem;
    padding-top: 0.5rem;
}

@media screen and (max-width: 575px) {
    .traffic-section__titles-subtitle .icon {
        width: 2.1rem;
    }
}

.traffic-section__titles-subtitle-text {
    font-weight: 600;
    font-size: 2.7rem;
    line-height: 1.36;
    color: #0c9;
}

@media screen and (max-width: 575px) {
    .traffic-section__titles-subtitle-text {
        font-size: 1.8rem;
        width: 28.8rem;
    }

    .traffic-section__titles-subtitle-text br {
        display: none;
    }
}

.traffic-section__titles-subtitle-text span {
    font-weight: 400;
    color: #acacac;
}

.traffic-section__box {
    display: flex;
    justify-content: center;
    -moz-column-gap: 19rem;
    column-gap: 19rem;
    margin-left: 6rem;
    align-items: stretch;
    margin-top: 11.5rem;
}

@media screen and (max-width: 575px) {
    .traffic-section__box {
        flex-direction: column;
        align-items: center;
        gap: 11rem;
        margin-top: 10.5rem;
        margin-left: 1rem;
    }
}

.traffic-section__box-item {
    display: flex;
    flex-direction: column;
}

@media screen and (max-width: 575px) {
    .traffic-section__box-item:nth-child(3n) {
        margin-top: 3.3rem;
    }
}

.traffic-section__box-item-top {
    display: flex;
    align-items: center;
    -moz-column-gap: 1.2rem;
    column-gap: 1.2rem;
    margin-bottom: 1.7rem;
    height: 6.6rem;
}

.traffic-section__box-item-top .icon {
    pointer-events: none;
    width: 6.6rem;
}

.traffic-section__box-item-title {
    font-weight: 700;
    font-size: 2.7rem;
    line-height: 1.213;
    color: #fff;
}

.traffic-section__box-item-subtitle {
    font-weight: 500;
    font-size: 1.9rem;
    line-height: 1.47;
    color: #bebebe;
    margin-top: 2.1rem;
    min-height: 17.5rem;
}

.traffic-section__box-item-btn {
    width: 21rem;
    height: 5.9rem;
    display: flex;
    justify-content: center;
    align-items: center;
    -moz-column-gap: 1.2rem;
    column-gap: 1.2rem;
    text-align: center;
    background-image: url(../img/traffic/btn.png);
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    margin-top: 2.8rem;
    transition: 320ms;
}

.traffic-section__box-item-btn:hover {
    transform: translateX(-0.5rem);
}

.traffic-section__box-item-btn.btn1 {
    margin-top: -0.5rem;
}

.traffic-section__box-item-btn .romb {
    width: 1.4rem;
    margin-top: -0.5rem;
}

.traffic-section__box-item-btn span {
    font-weight: 700;
    font-size: 1.1rem;
    line-height: 0.976;
    letter-spacing: 0.21em;
    background: radial-gradient(145.98% 149.31% at 0% 100%, rgb(252, 222, 156) 37.5%, rgb(255, 245, 0) 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.facts-section {
    height: 162.4rem;
}

@media screen and (max-width: 575px) {
    .facts-section {
        height: 193.5rem;
    }
}

.facts-section .facts-title {
    font-weight: 700;
    font-size: 6.2rem;
    line-height: 0.9;
    text-transform: uppercase;
    color: #fff;
    font-family: "Drukwidecyr", sans-serif;
    padding-top: 102rem;
    margin-left: 28.5rem;
}

@media screen and (max-width: 575px) {
    .facts-section .facts-title {
        margin-left: 4.8rem;
        padding-top: 39rem;
        font-size: 3.9rem;
    }
}

.facts-section .facts-title span {
    font-family: "Meddon", cursive;
    font-weight: 400;
    font-size: 5.3rem;
}

@media screen and (max-width: 575px) {
    .facts-section .facts-title span {
        font-size: 3.3rem;
    }
}

.facts-section .facts__item {
    position: absolute;
}

.facts-section .facts__item-title {
    font-weight: 700;
    font-size: 2.7rem;
    line-height: 1.27;
    letter-spacing: -0.04em;
    color: #161616;
    position: relative;
    overflow: hidden;
}

.facts-section .facts__item-title span {
    display: block;
}

@media screen and (max-width: 575px) {
    .facts-section .facts__item-title {
        font-size: 1.9rem;
    }
}

.facts-section .facts__item-subtitle {
    font-weight: 400;
    font-size: 1.8rem;
    line-height: 1.27;
    color: #696969;
    margin-top: 1.3rem;
}

@media screen and (max-width: 575px) {
    .facts-section .facts__item-subtitle {
        font-size: 1.3rem;
        margin-top: 0.9rem;
    }
}

.facts-section .facts__item.item1 {
    left: 30rem;
    top: 78rem;
}

@media screen and (max-width: 575px) {
    .facts-section .facts__item.item1 {
        left: 9rem;
        top: 18.5rem;
    }
}

.facts-section .facts__item.item2 {
    left: 4rem;
    top: 102rem;
}

@media screen and (max-width: 575px) {
    .facts-section .facts__item.item2 {
        left: 22rem;
        top: 56.5rem;
    }
}

.facts-section .facts__item.item2 .facts__item-title {
    color: #fff;
    line-height: 0.99;
}

.facts-section .facts__item.item2 .facts__item-subtitle {
    color: #bfbfbf;
    margin-top: 0.9rem;
}
/* ... */

